tests/snapshots/infos/discovery/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - discovery
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TYPE>

Usage: kermit infos discovery <TYPE> [PEERS]...

For more information, try '--help'.
