tests/snapshots/infos/discovery/reachable.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - discovery
    - Reachable
    - 1.2.3.4
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
