tests/snapshots/infos/discovery/reachable_no_peers.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - discovery
    - Reachable
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
