tests/snapshots/infos/discovery/unreachable.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - discovery
    - Unreachable
    - 1.2.3.4
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
